1113590 - Nodes requires Pulp's cert to be trusted 1112906 - pulp-admin requires Pulp's cert to be trusted 1112904 - pulp-consumer requires Pulp's cert to be trusted
This commit addresses three bugs:

[0] - Nodes wasn't checking the signature on the Parent Pulp server
against a list of trusted certificate authorities. This commit
introduces that check, as well as a new nodes.conf pair of settings to
either disable the check or change where the certificate pack is stored.

[1] - pulp-admin also had the same issue as Nodes, and it now also has
similar settings in admin.conf.

[2] - pulp-consumer was also affected by this same security issue.
Similar settings are introduced in consumer.conf with this commit.

[0] https://bugzilla.redhat.com/show_bug.cgi?id=1113590
[1] https://bugzilla.redhat.com/show_bug.cgi?id=1112906
[2] https://bugzilla.redhat.com/show_bug.cgi?id=1112904

--- a/nodes/common/etc/pulp/nodes.conf
+++ b/nodes/common/etc/pulp/nodes.conf
@@ -10,10 +10,15 @@
 # http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt
 
 # The main node configuration
+# ca_path - This is a path to a directory of trusted CA certificates
 # node_certificate - The absolute path to the node SSL certificate
+# verify_ssl - Set this to False to configure Nodes not to verify that the Pulp server's SSL
+#              cert is signed by a trusted authority
 
 [main]
+ca_path: /etc/pki/tls/certs/
 node_certificate: /etc/pki/pulp/nodes/node.crt
+verify_ssl: True
 
 
 # The oauth configuration used to authenticate to this node
