--- a/client_admin/etc/pulp/admin/admin.conf
+++ b/client_admin/etc/pulp/admin/admin.conf
@@ -1,8 +1,12 @@
 [server]
-
 host = localhost.localdomain
 port = 443
 api_prefix = /pulp/api
+# Set this to False to configure pulp-admin not to verify that the server's SSL cert is signed by a
+# trusted authority
+verify_ssl = True
+# This is a path to a directory of trusted CA certificates
+ca_path = '/etc/pki/tls/certs/'
 
 # Maximum amount of data (in bytes) sent for an upload in a single request
 upload_chunk_size = 1048576
